DiD S12: dialogue revisions

--- a/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
@@ -81,7 +81,7 @@
                     {STORYTXT_BACKGROUND book.jpg}
                 [/part]
                 [part]
-                    story= _ "The final entry gnaws at Mal Keshar. While he had been Darken Volk’s pawn, both of them were being using as pawns by the author of the book. Has his whole existence been nothing more than that of a puppet?"
+                    story= _ "The final entry gnaws at Mal Keshar. While he had been Darken Volk’s pawn, both of them were being used as pawns by the author of the book. Has his whole existence been nothing more than that of a puppet?"
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
                 [part]
@@ -402,7 +402,7 @@
 
                             [message]
                                 speaker=Too Foolish Hero
-                                message= _ "Your doom is at hand, lich! It is nigh time you answered for your crimes against humanity!"
+                                message= _ "Your doom is at hand, lich! It is nigh time you answered for your evil crimes!"
                             [/message]
 
                             [modify_side]
@@ -683,6 +683,7 @@
                         gold="$(200 + 60 * $timesForever)"
                         income="$(7 + 3 * $timesForever)"
 #endif
+                        # see comments on lines 822 and 823 regarding aggression
                         [ai]
                             aggression="$(min( [1.0, (0.3 + 0.1 * $timesForever) ] ) )"
                             villages_per_scout=10
@@ -1512,7 +1513,7 @@
 
                         [message]
                             role=speakinghero
-                            message= _ "Just some puny human. Amusing that he was more bothersome in death than in life. Annoying that it took so long to kill him."
+                            message= _ "Just some angst-ridden mage who turned to dark magic when he swore some stupid quest for revenge upon us. Amusing that he was more bothersome in death than in life. Annoying that it took so long to kill him."
                         [/message]
 
                         # easter egg text
