Add to credits: David Slaby (blaf)

--- a/data/core/about.cfg
+++ b/data/core/about.cfg
@@ -1130,6 +1130,9 @@
         comment = "wmlxgetext improvements"
     [/entry]
     [entry]
+        name = "David Slabý (blaf)"
+    [/entry]
+    [entry]
         name = "Daniel Bruegmann"
     [/entry]
     [entry]
