--- a/data/core/units/merfolk/Siren.cfg
+++ b/data/core/units/merfolk/Siren.cfg
@@ -20,7 +20,7 @@
 
 The myriad applications of this rarely occur to land dwellers, who simply regard it with wonder."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MAGICAL}
     die_sound=mermaid-die.ogg
-    {DEFENSE_ANIM "units/merfolk/siren.png" "units/merfolk/siren.png" mermaid-hit.ogg }
+    {DEFENSE_ANIM "units/merfolk/siren-defend2.png" "units/merfolk/siren-defend1.png" mermaid-hit.ogg }
     [attack]
         #note - this "naia" is deliberate, it is not a typo, it is not supposed to be "naiad".
         # wmllint: local spelling naia
