mermaid siren magic attack animation

--- a/data/core/units/merfolk/Siren.cfg
+++ b/data/core/units/merfolk/Siren.cfg
@@ -63,14 +63,14 @@ The myriad applications of this rarely occur to land dwellers, who simply regard
         {MERMAID_STAFF_FLARE 16 -12}
 
         [frame]
-            image="units/merfolk/siren.png:300" ### magic-1
+            image="units/merfolk/siren-magic-1.png:200"
         [/frame]
         [frame]
-            image="units/merfolk/siren.png:50" ### magic-2
+            image="units/merfolk/siren-magic-2.png:200" 
             sound=water-blast.wav
         [/frame]
         [frame]
-            image="units/merfolk/siren.png:80" ### magic-1
+            image="units/merfolk/siren-magic-1.png:120"
         [/frame]
     [/attack_anim]
     [attack_anim]
