TRoW S2: typo fix

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg
@@ -294,7 +294,7 @@
                 [command]
                     [message]
                         speaker=Wesfolk Leader
-                        message= _ "Let there be peace between us, our survival depends on it."
+                        message= _ "Let there be peace between us. Our survival depends on it."
                     [/message]
                     [allow_recruit]
                         side=1
