TRoW S3: punctuation fix

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/03_A_Harrowing_Escape.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/03_A_Harrowing_Escape.cfg
@@ -142,7 +142,7 @@
         [message]
             speaker=Tan-Schmog
             # wmllint: local spelling Grrrr
-            message= _ "You won’t get much further boy. Grrrr!"
+            message= _ "You won’t get much further, boy. Grrrr!"
         [/message]
     [/event]
 
