TSG S5: typo fix

--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -527,7 +527,7 @@
             [else]
                 [message]
                     speaker=second_unit
-                    message= _ "One less evil in this forest."
+                    message= _ "One fewer evil in this forest."
                 [/message]
             [/else]
         [/if]
