HttT S20b: Another dialog change (SpellingMistakes, #3939)

--- a/data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg
@@ -289,7 +289,7 @@
 
                     [message]
                         speaker=Kalenz
-                        message= _ "Then we must hurry. Stand fast! We will send reinforcements."
+                        message= _ "Then we must hurry. Stand fast! We shall send reinforcements."
                     [/message]
                 [/then]
             [/elseif]
