DiD S1: gameplay tweak

--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -91,7 +91,7 @@
         side=2
         controller=ai
         recruit=Orcish Grunt,Orcish Archer,Wolf Rider,Orcish Crossbowman
-        {GOLD 100 130 160}
+        {GOLD 80 120 160}
         {INCOME 3 5 7}
         team_name=orcs
         user_team_name= _ "Orcs"
@@ -186,7 +186,7 @@
             [/objective]
             [objective]
                 condition=lose
-                description= _ "Orcs break through the river fort defenses"
+                description= _ "Orcs reach the outskirts of Parthyn"
             [/objective]
             [objective]
                 condition=lose
