--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -34,7 +34,7 @@
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "When Malin was ten, a mage who passed through the town sensed strong magical abilities in the boy. His parents, seeing a chance for him to escape the constant battle with the orcs, arranged for him to be sent to the mages at the Isle of Alduin. He studied there for eight years, learning all manner of magic from basic control over the elements, to the mystic arts and scrying, to alchemy and simple medicine."
+            story= _ "When Malin was ten, a passing mage sensed strong magical abilities in the boy and suggested he be sent to the Isle of Alduin for training in the magical arts. Malin studied there for eight years, learning all manner of magic from basic control over the elements, to the mystic arts and scrying, to alchemy and simple medicine."
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
@@ -50,7 +50,7 @@
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "The silence was broken by the irregular shuffle of a man emerging from the trees. He stood before them, a hunched figure with a rasping voice reminiscent of crackling bones. <i>“I am Darken Volk. While I know you do not love my kind, I think it is vital that we put aside our differences for the moment. The orcish menace grows in the north and they will soon return in even greater force. You cannot hope to defend against them without my help.”</i>"
+            story= _ "The silence was broken by the irregular shuffle of a man emerging from the trees. He stood before them, a hunched figure with a rasping voice reminiscent of crackling bones. <i>“I am Darken Volk. While I know you do not love my kind, I think it is vital that we put aside our differences for the moment. The orcish menace grows in the north and they will soon return in even greater force. You cannot hope to defend against them without my... help.”</i>"
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
@@ -277,12 +277,12 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "What? I am hardly evil, Drogan! Surely you can see that!"
+            message= _ "What? I am hardly evil, Drogan!"
         [/message]
 
         [message]
             speaker=Dela Keshar
-            message= _ "You say that, brother, but you have been very close-mouthed about why the mages sent you home from Alduin. I am beginning to think that you were already dabbling in this witchcraft even before you met that foul necromancer!"
+            message= _ "You say that, brother, but you have been very close-mouthed about why the mages sent you home from Alduin. I am beginning to think that you were already dabbling in this witchcraft even before you met that necromancer!"
         [/message]
 
         [message]
@@ -469,7 +469,7 @@
 
                 [message]
                     speaker=Drogan
-                    message= _ "Yes, it is. Nobody will support you on your path to depravity."
+                    message= _ "Yes, yes it is. Nobody will support you on your path to depravity."
                 [/message]
 
                 # Hint that the loyal units stay behind
@@ -500,7 +500,7 @@
             [else]
                 [message]
                     speaker=Drogan
-                    message= _ "That was bravely done, lad, holding the orcs off by yourself. The mages taught you well. But I fear the raiding party brings grave news from the north. More warlords have begun to mass armies in the hills, no more than a few days north of the Great River. I do not know if we possess the strength to fight them off."
+                    message= _ "That was bravely done, lad, holding the orcs off by yourself. But I fear the raiding party brings grave news from the north. More warlords have begun to mass armies in the hills, no more than a few days north of the Great River. I do not know if we possess the strength to fight them off."
                 [/message]
 
                 [message]
