DiD S2: modified gold values and tweaked dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg
@@ -33,7 +33,7 @@
         side=1
         controller=human
         recruit=Walking Corpse,Vampire Bat
-        {GOLD 90 80 70}
+        {GOLD 105 90 75}
         team_name=good
         user_team_name= _ "Malin Keshar"
         {FLAG_VARIANT undead}
@@ -59,7 +59,7 @@
         side=2
         controller=ai
         recruit=Goblin Rouser,Goblin Impaler,Wolf Rider
-        {GOLD 35 50 65}
+        {GOLD 30 45 60}
         team_name=goblins
         user_team_name= _ "Goblins"
         {FLAG_VARIANT6 ragged}
@@ -118,7 +118,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "In truth, I share your hatred for the orcs. The Northlands have been my home for many years, and the orcs have been a growing infestation in recent times. They despoil the beauty of the land wherever they go, hacking and burning the forests and wildlife with their crude armaments. They are truly nothing but brutish barbarians. If you are interested, I would be happy to take you on as my... apprentice... so that you can aid me in the fight against them."
+            message= _ "In truth, I share your hatred for the orcs. The Northlands have been my home for many years and the orcs have been a growing infestation in recent times. They despoil the beauty of the land wherever they go, hacking and burning the forests and wildlife with their crude armaments. They are truly nothing but brutish barbarians. If you are interested, I would be happy to take you on as my... apprentice... so that you can aid me in the fight against them."
         [/message]
 
         [message]
@@ -128,7 +128,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Perhaps removing the threat of orc raids will persuade the people of Parthyn to welcome you home."
+            message= _ "Perhaps removing the threat of orcish raids will persuade the people of Parthyn to welcome you home."
         [/message]
 
         [message]
