DiD S2: tweak ghoul raising scene

--- a/data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg
@@ -329,6 +329,15 @@
 
         [redraw]
             side=1
+            clear_shroud=yes
+        [/redraw]
+
+        [delay]
+            time=1000
+        [/delay]
+
+        [redraw]
+            side=1
         [/redraw]
 
         [message]
