DiD S3: dialogue tweaks

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -22,7 +22,7 @@
     [story]
         [part]
             music=transience.ogg
-            story=_ "Malin and Darken Volk spend the summer and fall traveling across the lower Northlands. They attack goblin villages and small orc camps when they find them. Although Darken Volk is occasionally demanding and irritable, he proves to be an effective mentor. Malin’s power grows considerably under the necromancer’s tutelage."
+            story=_ "Malin and Darken Volk spend the summer and fall traveling across the lower Northlands. They attack goblin villages and small orcish camps when they find them. Although Darken Volk is occasionally demanding and irritable, he proves to be an effective mentor. Malin’s power grows considerably under the necromancer’s tutelage."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -103,7 +103,6 @@
             description= _ "Death of Malin Keshar"
         [/objective]
         [gold_carryover]
-            bonus=yes
             carryover_percentage=100
         [/gold_carryover]
     [/objectives]
@@ -123,7 +122,6 @@
                 description= _ "Death of Malin Keshar"
             [/objective]
             [gold_carryover]
-                bonus=yes
                 carryover_percentage=100
             [/gold_carryover]
         [/objectives]
@@ -240,7 +238,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "I sense many lifeforms in this cavern, but none are very powerful. Most likely they are merely nothing more than... beasts. Still, we may be able to use them to continue your training."
+            message= _ "I sense many lifeforms in this cavern, but none are very powerful. Most likely they are merely nothing more than beasts. Still, we may be able to use them to continue your training."
         [/message]
 
         [message]
@@ -328,7 +326,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "This should be an easy task for you. Once you have slain them both, we will turn them into skeletons."
+            message= _ "This should be an easy task for you. Once you have slain them both, we shall turn them into skeletons."
         [/message]
     [/event]
 
@@ -405,7 +403,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Good... I have already showed you how to raise a skeleton before, but perhaps it would be best if we... went over it once again. Other than ghouls, flesh and blood are useless for undead creatures. First, let out the blood and innards and dispose of them."
+            message= _ "Good... I have already showed you how to raise a skeleton before, but perhaps it would be best if we... went over it once again. Other than for ghouls, flesh and blood are useless for undead creatures. First, let out the blood and innards and dispose of them."
         [/message]
 
         [message]
@@ -727,7 +725,6 @@
                 description= _ "Death of Malin Keshar"
             [/objective]
             [gold_carryover]
-                bonus=yes
                 carryover_percentage=100
             [/gold_carryover]
         [/objectives]
@@ -1065,7 +1062,6 @@
                 description= _ "Death of Malin Keshar"
             [/objective]
             [gold_carryover]
-                bonus=yes
                 carryover_percentage=100
             [/gold_carryover]
         [/objectives]
