--- a/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
@@ -13,12 +13,11 @@
     {SCENARIO_MUSIC       the_city_falls.ogg}
     {EXTRA_SCENARIO_MUSIC casualties_of_war.ogg}
     {EXTRA_SCENARIO_MUSIC vengeful.ogg}
-    {EXTRA_SCENARIO_MUSIC northerners.ogg}
 
     [story]
         [part]
             music=underground.ogg
-            story= _ "Weeks pass in the cold, bare caverns. There is little light and little food, but Malin’s burning desire for vengeance sustains him through his training. As the grip of black magic grows stronger, so does his control of the undead. He finds it to be a mastery of a different sort than what he was taught at the Academy. The magic reaches out to him as it never has before; he <i>feels</i> it, the flows of energy, ebony power streaming through his soul. He listens and it speaks back — he senses its will and lets it guide him — he embraces the dark magic as an extension of himself."
+            story= _ "Weeks pass in the cold, bare caverns. There is little light and little food, but Malin’s burning desire for vengeance sustains him through his training. As the grip of black magic grows stronger, so does his control of the undead. He finds it to be a mastery of a different sort than what he was taught at the Academy. The magic reaches out to him as it never has before; he listens and it speaks back — he senses its will and lets it guide him — he embraces the dark magic as an extension of himself."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -34,7 +33,7 @@
         side=1
         controller=human
         recruit=Walking Corpse,Vampire Bat,Ghost,Ghoul,Skeleton Archer,Skeleton
-        {GOLD 130 120 110}
+        {GOLD 150 130 110}
         team_name=good
         user_team_name= _ "Malin Keshar"
         {FLAG_VARIANT undead}
@@ -53,7 +52,7 @@
         controller=ai
         recruit=Orcish Archer,Orcish Crossbowman,Wolf Rider,Orcish Grunt
         {GOLD 30 45 60}
-        {INCOME 5 6 7}
+        {INCOME 2 4 6}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
