--- a/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
@@ -5,7 +5,7 @@
     name= _ "Orc War"
     map_data="{campaigns/Descent_Into_Darkness/maps/05_Orc_War.map}"
     victory_when_enemies_defeated=yes
-    {TURNS 45 41 37}
+    turns=37
     next_scenario=06_Return_to_Parthyn
 
     {DEFAULT_SCHEDULE_MORNING}
@@ -16,11 +16,11 @@
 
     [story]
         [part]
-            story=_ "The cycle of the seasons churns and summer and fall roll around once more. Malin’s thoughts turn back to Parthyn frequently, where a year prior, he had still been among family and friends in the rustic little town that he still thinks of as his home. He has since become forsaken wanderer, he thinks, but the still burning image of his father being cut down amidst the ruins of his home is imprinted at the forefront of his mind."
+            story=_ "The cycle of the seasons churns and summer and fall roll around once more. Malin’s thoughts turn back to Parthyn frequently, where a year prior, he had still been among family and friends in the rustic little town that he still thinks of as his home. He has since become a forsaken wanderer, he thinks, but the still burning image of his father being cut down amidst the ruins of his home is imprinted at the forefront of his mind."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story=_ "Companionship and peace... perhaps they are but a farce and certainly an impossibility with the threat of the orcish clans still looming. Perhaps there is no point in reminiscing. He has never been one for regrets."
+            story=_ "Companionship and peace... perhaps they are but a farce and certainly an impossibility with the threat of the orcish clans still looming. Perhaps there is no point in reminiscing on his once peaceful, pastoral life. He has never been one for regrets."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -28,7 +28,7 @@
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story=_ "Word spreads to the south as well when the ever present orc raids are suddenly absent this year. The people at the frontier towns go about their days, gossiping about rumors of the undead, some with disgust, some with intrigue. When winter passes and spring comes again, a number of dark adepts travel northward and join the pair of necromancers. <i>“They can be quite useful,”</i> Darken Volk says to Malin, <i>“but none of them have even a tenth of your potential power.”</i>"
+            story=_ "Word spreads to the south as well when the ever present raids are suddenly absent this year. The people at the frontier towns go about their days, gossiping about rumors of the undead, some with disgust, some with intrigue. When winter passes and spring comes again, a number of dark adepts travel northward and join the pair of necromancers. <i>“They can be quite useful,”</i> Darken Volk says to Malin, <i>“but none of them have even a tenth of your potential power.”</i>"
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -44,7 +44,7 @@
         side=1
         controller=human
         recruit=Walking Corpse,Vampire Bat,Ghost,Ghoul,Skeleton Archer,Skeleton,Dark Adept DiD
-        {GOLD 200 175 150}
+        {GOLD 190 170 150}
         team_name=good
         user_team_name= _ "Malin Keshar"
         {FLAG_VARIANT undead}
@@ -60,8 +60,8 @@
         side=2
         controller=ai
         recruit=Goblin Spearman,Orcish Archer,Orcish Crossbowman,Wolf Rider,Orcish Grunt,Goblin Knight,Orcish Warrior,Troll Whelp
-        {GOLD 70 80 90}
-        {INCOME 6 7 8}
+        {GOLD 50 70 90}
+        {INCOME 4 6 8}
         team_name=orcs
         user_team_name=_"Orcs"
         {FLAG_VARIANT6 ragged}
@@ -98,8 +98,8 @@
         side=3
         controller=ai
         recruit=Orcish Archer,Orcish Crossbowman,Goblin Pillager,Orcish Grunt,Orcish Assassin
-        {GOLD 70 80 90}
-        {INCOME 8 9 10}
+        {GOLD 50 70 90}
+        {INCOME 5 7 9}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -136,8 +136,8 @@
         side=4
         controller=ai
         recruit=Orcish Archer,Orcish Crossbowman,Troll Whelp,Wolf Rider,Orcish Grunt
-        {GOLD 70 80 90}
-        {INCOME 6 7 8}
+        {GOLD 50 70 90}
+        {INCOME 4 6 8}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
