--- a/data/campaigns/Descent_Into_Darkness/utils/deaths.cfg
+++ b/data/campaigns/Descent_Into_Darkness/utils/deaths.cfg
@@ -9,7 +9,7 @@
 
         [message]
             speaker=unit
-            message= _ "I’m not ready to die..."
+            message= _ "I’m not ready to die yet..."
         [/message]
 
         [endlevel]
@@ -27,7 +27,7 @@
 
         [message]
             speaker=unit
-            message= _ "Then my battle against the orcs is lost!"
+            message= _ "... Then my battle against the orcs is lost!"
         [/message]
 
         [endlevel]
@@ -45,7 +45,7 @@
 
         [message]
             speaker=unit
-            message= _ "Fool boy! You have allowed my death, and now none in this world will aid you."
+            message= _ "Fool boy! With my demise, none in this world will aid you..."
         [/message]
 
         [endlevel]
