DiD S6: update dialogue and adjust ai gold

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -18,14 +18,14 @@
         [part]
             music=northerners.ogg
             story= _ "Two days’ travel south of the previous battle, Malin picks up the trail of the regrouped orcish warriors. He follows them down the western bank of the river Listra, past the Whitefang Mountains. He wonders why they continue rushing toward the Great River instead of calling for reinforcements, but after a bit of thought, he realizes where the orcs are headed. It is, after all, the season when they usually raid human towns."
-            {STORYTXT_BACKGROUND parthyn.jpg}
+            {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story= _ "<i>‘This chieftain has no intention of warning the rest of his clan about me. I suppose he must think that I intend to attack the rest of the Whitefangs rather than pursue him this far; with the rest of his brethren occupied against me, he will be able to raid more human towns undisturbed. Selfish creature. Exactly what one would expect from an orc.’</i> Malin thinks carefully and quickly realizes what he should do."
-            {STORYTXT_BACKGROUND parthyn.jpg}
+            story= _ "<i>‘This chieftain has no intention of warning the rest of his clan about me. I suppose he must think that I intend to attack the rest of the Whitefangs rather than pursue him this far; with his brethren occupied against me, he will be able to raid more human towns undisturbed. Selfish creature. Exactly what one would expect from an orc.’</i> Malin thinks carefully and quickly realizes what he should do."
+            {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story= _ "Malin tramps through the woods tirelessly, forsaking several days’ sleep as he and his servants draw closer to the Great River, hoping to cut off the orcs before they reach Parthyn. Soon, he recognizes some familiar surroundings..."
+            story= _ "He tramps through the woods tirelessly, forsaking several days’ sleep as he and his servants draw closer to the Great River, hoping to cut off the orcs before they reach Parthyn. Soon, Malin recognizes some familiar surroundings..."
             {STORYTXT_BACKGROUND parthyn.jpg}
         [/part]
     [/story]
@@ -61,8 +61,8 @@
 #else
         recruit=Wolf Rider,Goblin Knight,Orcish Archer,Orcish Crossbowman,Orcish Grunt,Troll Whelp
 #endif
-        {GOLD 90 120 150}
-        {INCOME 4 5 6}
+        {GOLD 80 100 120}
+        {INCOME 3 5 7}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -170,7 +170,7 @@
     [objective]
         condition=win
         {BONUS_OBJECTIVE_CAPTION}
-        description= _ "Kill the orc leader"
+        description= _ "Kill the orcish leader"
         [show_if]
             {DID_RTP_HAS_ORC_LEADER}
         [/show_if]
@@ -237,7 +237,7 @@
             [then]
                 [message]
                     speaker=Drogan
-                    message= _ "I hoped that I would never see you again, Malin. I see that you are not taking your banishment seriously, so I will make this clear: no matter for what reason you have returned, you are not welcome here. Take one step closer to Parthyn and I will order the guards to attack you."
+                    message= _ "I hoped that I would never see you again, Malin. I see that you are not taking your banishment seriously, so I will make myself clear to you: no matter for what reason you have returned, you are not welcome here. Take one step closer to Parthyn and I will order the guards to attack you."
                 [/message]
 
                 [message]
@@ -345,7 +345,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "<i>If I want the people of Parthyn to accept me back, I must be cautious. I must not kill any of them besides Drogan, or they will surely oust me for good.</i>"
+            message= _ "<i>If I want the people of Parthyn to accept me back, I must be cautious. I must not kill any of them besides Drogan or they will surely oust me for good.</i>"
         [/message]
     [/event]
 
@@ -720,7 +720,7 @@
                 condition=lose
                 description= _ "Death of Malin Keshar"
             [/objective]
-            
+
             {TURNS_RUN_OUT}
 
             [gold_carryover]
@@ -821,7 +821,7 @@
 
         [message]
             speaker=OWarlord
-            message= _ "Look what we have here! A human city on the verge of collapse and a necromancer with only a few paltry minions at his command. The wolves will feed well tonight!"
+            message= _ "Look what we have here! A human city on the verge of collapse and a necromancer with only a few, paltry minions at his command. The wolves will feed well tonight!"
         [/message]
         [message]
             speaker=Malin Keshar
