--- a/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
@@ -328,6 +328,11 @@
             [/command]
         [/random_placement]
 
+        # this code is a handler in case this scenario is reached via debug or an old save which did not include this variable
+        [lua]
+            code = << if wesnoth.get_variable("S7_turns")==nil then wesnoth.set_variable("S7_turns",5) end >>
+        [/lua]
+
         [set_variable]
             name=S7_turns
             value=$(min({ON_DIFFICULTY 7 6 5},($S7_turns)))
