DiD S6: adjust ai gold and fix grammar

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -61,7 +61,7 @@
 #else
         recruit=Wolf Rider,Goblin Knight,Orcish Archer,Orcish Crossbowman,Orcish Grunt,Troll Whelp
 #endif
-        {GOLD 80 100 120}
+        {GOLD 75 100 125}
         {INCOME 3 5 7}
         team_name=orcs
         user_team_name= _ "Orcs"
@@ -315,7 +315,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Drogan! With my newfound powers, I have already eliminated several orc chieftains! If you will allow me to help, I will crush the one who comes here as well!"
+            message= _ "Drogan! With my newfound powers, I have already eliminated several orcish chieftains! If you will allow me to help, I will crush the one who comes here as well!"
         [/message]
 
         [message]
@@ -534,7 +534,7 @@
             [then]
                 [message]
                     speaker=Malin Keshar
-                    message= _ "Behold, Drogan! I have slain the orc chieftain. Do you trust me now?"
+                    message= _ "Behold, Drogan! I have slain the orcish chieftain. Do you trust me now?"
                 [/message]
 
                 [message]
