DiD S7: dialogue and player gold tweak

--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -81,7 +81,7 @@
     [story]
         [part]
             music=underground.ogg
-            story= _ "Fleeing from the city of his birth, Malin escapes into the forested hills north of the Great River. Several hours west, he finally stops after several days bereft of rest or sleep. He closes his eyes, trying to purge the last few hours from his mind, but the darkness only makes the images all the more vivid. He is tired, <i>so</i> tired, but sleep does not come."
+            story= _ "Fleeing from the city of his birth, Malin escapes into the forested hills north of the Great River. Some distance west, he finally stops after several days bereft of rest and sleep. He closes his eyes, trying to purge the last few hours from his mind, but the darkness only makes the images all the more vivid. He is tired, <i>so</i> tired, but sleep does not come."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -89,7 +89,7 @@
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story= _ "<i>“No, no. Even if there were another way, they would have spurned me all the same. They are wrong... blind. I have no regrets about what I did. No regrets...”</i> He quells the voice. Sleep comes, long stretches of dreamless darkness punctuated briefly by nightmarish forms — distorted, grotesque things that whisper in eerily familiar voices. <i>‘You are cursed, Malin the Damned! Cursed! Cursed. Cursed...’</i> They echo over and over, first a choir, then a duet, both male, then just one. One voice alone in the darkness."
+            story= _ "<i>“No, no. Even if there were another way, they would have spurned me all the same. They are wrong... blind. I have no regrets about what I did. No regrets...”</i> He quells the voice. Sleep comes, long stretches of dreamless darkness punctuated briefly by nightmarish forms — distorted, grotesque things that whisper in eerily familiar voices. <i>‘You are cursed, Malin the Damned! Cursed! Cursed. Cursed...’</i> They echo over and over, first a choir, then a duet, both male, then just one, a single voice alone in the darkness."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -105,7 +105,7 @@
             {STORYTXT_BACKGROUND book.jpg}
         [/part]
         [part]
-            story= _ "Darken Volk continues, <i>“Excellent. There is a lord of Tath by the name of Karres. He was trained as a mage in his youth and now uses his wealth to support a large number of mages in their studies. Among his library is the book we seek. We will need to break into his manor to seek the book.”</i>"
+            story= _ "Darken Volk continues, <i>“Excellent. There is a lord of Tath by the name of Karres. He was trained as a mage in his youth and now uses his wealth to support a large number of mages in their studies. Among his library is the book we seek. We shall break into his manor to seek the book.”</i>"
             {STORYTXT_BACKGROUND book.jpg}
         [/part]
     [/story]
@@ -117,7 +117,7 @@
         side=1
         controller=human
         recruit=Walking Corpse,Vampire Bat,Ghost,Ghoul,Skeleton Archer,Skeleton,Dark Adept DiD
-        {GOLD 160 140 120}
+        {GOLD 180 150 120}
         team_name=intruders
         user_team_name= _ "Intruders"
         {FLAG_VARIANT undead}
@@ -451,7 +451,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "The stolen book lies within Lord Karres’s manor at the north end of the city. It will be difficulty for us to defeat the entire city guard, so we must stay hidden as long as possible. For now, we can use this fog to our advantage. I will cast a spell using it to obscure the vision of the town guards. It should not affect us, however."
+            message= _ "The stolen book lies within Lord Karres’s manor at the north end of the city. It will be difficult for us to defeat the entire city guard, so we must stay hidden as long as possible. For now, we can use this fog to our advantage. I shall use it to cast a spell to obscure town guards’ vision. It should not affect us, however."
         [/message]
 
         [delay]
@@ -472,7 +472,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "This spell will not hide us completely. If we stray too close to the guards, they will still be able to see us. Once we are spotted, we will have to make a run for it. The faster we enter the manor, the more time we will have to search for the book before the guards will start to pursue us."
+            message= _ "This spell will not hide us completely. If we stray too close to the guards, they will still be able to see us. Once we are spotted, we shall have to make a run for it. The faster we enter the manor, the more time we shall have to search for the book before the guards can pursue us."
         [/message]
 
         [message]
