DiD S8: small fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
@@ -168,10 +168,10 @@
         [/switch]
 
         [unit]
-#ifdef EASY
-            type=Arch Mage
-#else
+#ifdef HARD
             type=Great Mage
+#else
+            type=Arch Mage
 #endif
             id=Lord Karres
             name= _ "Lord Karres"
@@ -833,7 +833,7 @@ Leaving only bones to remain.</i>"
         [message]
             speaker=Darken Volk
             # po: a vault is a big underground room, sort of like a gigantic basement
-            message= _ "I feel the breaking of an illusion spell. The book is in the vault in the northwest corner of the manor. We need to find the passageway leading there!"
+            message= _ "I feel the breaking of an illusion spell. The book is in the vault in the northwest corner of the manor. We must find the passageway leading there!"
         [/message]
 
         [objectives]
