DiD S6: punctuation fix

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -821,7 +821,7 @@
 
         [message]
             speaker=OWarlord
-            message= _ "Look what we have here! A human city on the verge of collapse and a necromancer with only a few, paltry minions at his command. The wolves will feed well tonight!"
+            message= _ "Look what we have here! A human city on the verge of collapse and a necromancer with only a few paltry minions at his command. The wolves will feed well tonight!"
         [/message]
         [message]
             speaker=Malin Keshar
