DiD S7: fix typo

--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -451,7 +451,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "The stolen book lies within Lord Karres’s manor at the north end of the city. It will be difficult for us to defeat the entire city guard, so we must stay hidden as long as possible. For now, we can use this fog to our advantage. I shall use it to cast a spell to obscure town guards’ vision. It should not affect us, however."
+            message= _ "The stolen book lies within Lord Karres’s manor at the north end of the city. It will be difficult for us to defeat the entire city guard, so we must stay hidden as long as possible. For now, we can use this fog to our advantage. I shall use it to cast a spell to obscure the town guards’ vision. It should not affect us, however."
         [/message]
 
         [delay]
