DiD S3: restore allied moves and attacks after each scene

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -108,6 +108,19 @@
     [/objectives]
 #enddef
 
+#define FULL_HEAL_RESTORE FILTER
+    [heal_unit]
+        [filter]
+            {FILTER}
+        [/filter]
+
+        amount=full
+        moves=full
+        restore_statuses=yes
+        restore_attacks=yes
+    [/heal_unit]
+#enddef
+
     [event]
         name=prestart
 
@@ -394,7 +407,7 @@
     [event]
         name=cutscene1
 
-        {FULL_HEAL (id=Malin Keshar)}
+        {FULL_HEAL_RESTORE (id=Malin Keshar)}
 
         [message]
             speaker=Malin Keshar
@@ -567,7 +580,7 @@
             id=Ogre3
         [/filter]
 
-        {FULL_HEAL (side=1)}
+        {FULL_HEAL_RESTORE (side=1)}
 
         {PLACE_IMAGE "items/bones.png" $x1 $y1}
 
@@ -656,7 +669,7 @@
         {GENERIC_UNIT 2 (Giant Scorpion) 25 4}
         {GENERIC_UNIT 2 (Giant Scorpion) 23 6}
 
-        {MODIFY_UNIT (type=Giant Scorpion) max_moves 4}
+        {MODIFY_UNIT (type=Giant Scorpion) max_moves 3}
 
         {OBJECTIVE_EXPLORE}
     [/event]
@@ -996,7 +1009,7 @@
         [/terrain]
         [redraw][/redraw]
 
-        {FULL_HEAL (side=1)}
+        {FULL_HEAL_RESTORE (side=1)}
 
         {GENERIC_UNIT 2 (Giant Scorpion) 5 5}
         {GENERIC_UNIT 2 (Giant Scorpion) 8 3}
@@ -1160,3 +1173,6 @@
     {HERODEATH_MALIN}
     {HERODEATH_VOLK}
 [/scenario]
+
+#undef OBJECTIVE_EXPLORE
+#undef FULL_HEAL_RESTORE
