DiD S10: dialogue tweaks

--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -303,7 +303,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "You used me! You knew the people of Parthyn would cast me out — you knew I had nobody else to turn to... you knew I would do whatever you said..."
+            message= _ "You used me! You knew the people of Parthyn would cast me out — you knew I had nobody else to turn to! You knew I would do whatever you said..."
         [/message]
 
         {MOVE_UNIT (id=Darken Volk) 13 16}
@@ -322,7 +322,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "... you can’t abandon me too, not the way they did... father, Drogan, Dela... I have nothing left..."
+            message= _ "... you can’t abandon me too, not the way they did... father, Drogan, Dela..."
         [/message]
 
         {MOVE_UNIT (id=Darken Volk) 17 17}
@@ -462,12 +462,12 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Enough prattle from you, boy. Fighting the orcs is your want, not mine. You cannot expect me to help you in an endeavor that does not concern me at all."
+            message= _ "Enough prattle from you, boy. Fighting the orcs is your ambition, not mine. You cannot expect me to help you in an endeavor that does not concern me at all."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "The very same to you! I helped you retrieve that book! If you will not help me with my ambitions, I will at least keep the fruits of my labor."
+            message= _ "The very same to you! I helped you retrieve that book! If you will not help me with my mission, I will at least keep the fruits of my labor."
         [/message]
 
         [message]
@@ -497,7 +497,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Done? I have done nothing but give you an opportunity. What you choose to do with your life is not my business. Now leave me alone!"
+            message= _ "Done? I have done nothing but give you an opportunity. What you choose to do with your life is not my business. Leave me alone!"
         [/message]
     [/event]
 
@@ -553,7 +553,7 @@
 
         [message]
             speaker=Sir Cadaeus
-            message= _ "Your travels in this region have not gone unnoticed, necromancers! The disaster you wreaked upon the good city of Tath and the noble Lord Karres can only be paid back in turn with your blood and souls — whatever little may remain of them. Yes, on this day you shall have to answer for your innumerable crimes."
+            message= _ "Your travels in this region have not gone unnoticed, necromancers! The disaster you wreaked upon the good city of Tath and the noble Lord Karres can only be paid back in turn with your blood and souls — whatever little may remain of them. Yes, on this day, you shall have to answer for your innumerable crimes."
         [/message]
 
         [message]
@@ -610,7 +610,7 @@
 
         [message]
             speaker=Dela Keshar
-            message= _ "I finally found you, Malin! On this day, you will pay for what you have done to my people. I will not let you live to see another sunset."
+            message= _ "I finally found you, Malin! At last, you will have to pay for what you have done to my people and my home. I will not let you live to see another sunset."
         [/message]
 
         [message]
@@ -926,7 +926,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Life, death... and unlife — at this point, I could accept any of them and nothing would change."
+            message= _ "Life, death... unlife — at this point, I could accept any of them and nothing would change."
         [/message]
 
         [message]
