DiD S10: adjust ai gold

--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -55,8 +55,8 @@
         side=2
         controller=ai
         recruit=Blood Bat,Ghost,Wraith,Necrophage,Skeleton Archer,Bone Shooter,Skeleton,Revenant,Deathblade,Dark Adept DiD,Dark Sorcerer DiD
-        {GOLD 200 250 300}
-        {INCOME 16 20 24}
+        {GOLD 170 220 270}
+        {INCOME 20 25 30}
         team_name=bad
         user_team_name= _ "Darken Volk"
         no_leader=yes
@@ -248,7 +248,7 @@
                 # DV already has book
                 [message]
                     speaker=Darken Volk
-                    message= _ "Now go your own way and I will go mine."
+                    message= _ "Now go your own way, and I will go mine."
                 [/message]
             [/else]
         [/if]
@@ -547,7 +547,7 @@
         [modify_side]
             side=3
             {QUANTITY gold 50 75 100}
-            {QUANTITY income 12 15 18}
+            {QUANTITY income 12 16 20}
             hidden=no
         [/modify_side]
 
