NR S12a: make it clear that player does not receive gold if Sisal dies

--- a/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
@@ -485,6 +485,10 @@
 
             {AI_CONTROLLER_NOTE}
 
+            [note]
+                description= _ "You will not receive any gold if Sisal dies."
+            [/note]
+
             [gold_carryover]
                 bonus=yes
                 carryover_percentage=40
@@ -536,8 +540,15 @@
 
         [message]
             id="Ha'Tuil"
-            message= _ "Hahaha! Mission accomplished, men! Now let’s crush the rest of this scum and report back to the Master."
+            message= _ "Hahaha! Mission accomplished! I’ll send a wolf to the Master to deliver the gold. Now let’s crush the rest of this scum!"
         [/message]
+
+        [move_unit_fake]
+            type=Goblin Knight
+            x=19,25
+            y=13,12
+            side=3
+        [/move_unit_fake]
 
         [message]
             id=Eryssa
