Tutorial: change water warning to activate on all water hexes

--- a/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
+++ b/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
@@ -634,8 +634,7 @@ A full list of abilities and weapons specials, along with traits, may be found i
     [event]
         name=moveto
         [filter]
-            x=8,8,8,8,10,11,17,19,20
-            y=10,11,12,14,15,15,14,16,14
+            terrain=Ww
             side=1
         [/filter]
 
