Tutorial: add dialogue for Konrad or Li'sar levelup

--- a/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
+++ b/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
@@ -1096,6 +1096,20 @@ A full list of abilities and weapons specials, along with traits, may be found i
         [/message]
     [/event]
 
+    # If you advance Konrad or Li'sar
+    [event]
+        name=post_advance
+        [filter]
+            id=student
+        [/filter]
+
+        [message]
+            speaker=unit
+            message= _ "Advancing a level has fully healed me! I have become better at using the sword, dealing 9 damage in 4 attacks. Although I do not have any special abilities, my fighting skills will allow me to beat the orcs by dealing more damage!"
+            female_message= _ "female^Advancing a level has fully healed me! I have become better at using the sword, dealing 9 damage in 4 attacks. Although I do not have any special abilities, my fighting skills will allow me to beat the orcs by dealing more damage!"
+        [/message]
+    [/event]
+
     [event]
         name=time over
 
