Tutorial: allow fighters to levelup

--- a/data/campaigns/tutorial/units/Warrior.cfg
+++ b/data/campaigns/tutorial/units/Warrior.cfg
@@ -1,21 +1,22 @@
 #textdomain wesnoth-tutorial
 [unit_type]
-    id=Fighter
-    name= _ "Fighter"
+    id=Warrior
+    name= _ "Warrior"
     race=human
     num_traits=0
     image="units/konrad-fighter.png"
     profile=portraits/konrad.png
-    hitpoints=32
+    hitpoints=50
     movement_type=smallfoot
     movement=6
-    experience=33
-    advances_to=Warrior
-    level=1
+    experience=100
+    advances_to=null
+    {AMLA_DEFAULT}
+    level=2
     alignment=lawful
-    cost=18
+    cost=32
     usage=mixed fighter
-    description= _ "Young and brash, Fighters are skilled with swords and are vulnerable to attack from enemies. However, they have the potential to become great warriors one day."
+    description= _ "With more experience, Fighters have honed their skills with the sword and become powerful Warriors."
     die_sound={SOUND_LIST:HUMAN_DIE}
     {DEFENSE_ANIM "units/konrad-fighter-defend.png" "units/konrad-fighter.png" {SOUND_LIST:HUMAN_HIT} }
     [attack]
@@ -26,8 +27,8 @@
         icon=attacks/sword-human.png
         type=blade
         range=melee
-        damage=6
-        number=3
+        damage=9
+        number=4
     [/attack]
     [attack_anim]
         [filter_attack]
