--- a/data/campaigns/tutorial/units/Warrioress.cfg
+++ b/data/campaigns/tutorial/units/Warrioress.cfg
@@ -1,23 +1,24 @@
 #textdomain wesnoth-tutorial
 [unit_type]
-    id=Fighteress
-    name= _ "female^Fighter"
+    id=Warrioress
+    name= _ "female^Warrior"
     gender=female
     race=human
     num_traits=0
     image="units/human-princess.png"
     {DEFENSE_ANIM "units/human-princess-defend-2.png" "units/human-princess-defend-1.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
     profile=portraits/lisar.png
-    hitpoints=32
+    hitpoints=50
     movement_type=smallfoot
     movement=6
-    experience=33
-    advances_to=Warrioress
-    level=1
+    experience=100
+    advances_to=null
+    {AMLA_DEFAULT}
+    level=2
     alignment=lawful
-    cost=18
+    cost=32
     usage=mixed fighter
-    description= _ "Young and brash, Fighters are skilled with swords and are vulnerable to attack from enemies. However, they have the potential to become great warriors one day."
+    description= _ "With more experience, Fighters have honed their skills with the sword and become powerful Warriors."
     die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
     [attack]
         name=sword
@@ -27,8 +28,8 @@
         icon=attacks/saber-human.png
         type=blade
         range=melee
-        damage=6
-        number=3
+        damage=9
+        number=4
     [/attack]
     [attack_anim]
         [filter_attack]
