UtBS: update pathfinder description

--- a/data/campaigns/Under_the_Burning_Suns/units/quenoth/Pathfinder.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/units/quenoth/Pathfinder.cfg
@@ -18,7 +18,7 @@
     advances_to=Quenoth Outrider
     cost=18
     usage=scout
-    description= _ "In most cases, turning and fleeing from an engagement is a risky tactic. These elusive Pathfinders, however, are masters of weakening an enemy while at the same time provoking them to give chase — often into a trap."+{SPECIAL_NOTES}+{SPECIAL_NOTES_DISENGAGE}+{SPECIAL_NOTES_SLOW}
+    description= _ "In times past, turning and fleeing from an engagement was a risky tactic; against archers especially, turning ones’ back from the battle usually meant certain death, for there were few means to avoid or block shots from behind. The elusive Pathfinders, however, ride the exceptionally agile dustboks, who can evade most attacks with their swift, erratic movements. The difficulty in pinning these riders down often tries the patience of their enemies, who are provoked into recklessly giving chase — inevitably into a trap."+{SPECIAL_NOTES}+{SPECIAL_NOTES_DISENGAGE}+{SPECIAL_NOTES_SLOW}
     die_sound=horse-die.ogg
     [abilities]
         {ABILITY_DISENGAGE}
