Add various new features to the schema
Addresses #3730

This is everything I could find by perusing the commit log.
I may have missed something, however.

--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -117,7 +117,6 @@
 	{SIMPLE_KEY terrain_liked terrain_list}
 [/tag]
 
-# TODO: Is [event] really allowed at toplevel, outside a [scenario] or [era]?
 [tag]
 	name="event"
 	max=infinite
@@ -458,6 +457,7 @@
 		{SIMPLE_KEY image string}
 		{SIMPLE_KEY mask string}
 		{SIMPLE_KEY lawful_bonus int}
+		{SIMPLE_KEY liminal_bonus int}
 		{SIMPLE_KEY red int}
 		{SIMPLE_KEY green int}
 		{SIMPLE_KEY blue int}
