--- a/data/campaigns/Under_the_Burning_Suns/utils/abilities.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/utils/abilities.cfg
@@ -146,7 +146,10 @@ _" This unit is capable of healing those around it, slowing dehydration, and cur
     [dummy]
         id=daze
         name= _ "daze"
-        description= _ "When hit with this attack, an enemy suffers a 10% penalty both to their defense and chance to hit for one turn, except for magical attacks."
+        description= _ "When hit with this attack, an enemy suffers a 10% penalty both to their defense and chance to hit for one turn. Other specials that affect chance to hit (e.g. magical and marksman) take precedence over this special.
+
+Magical attacks will still have a 70% chance to hit.
+Marksman attacks are only affected if the chance to hit is greater than 60%."
     [/dummy]
 #enddef
 
